src/css/components/_episodes.sass
.#{$ns}-episode
  position: relative
  padding: 11px 0 12px 0
  transition: border-left .1s ease
  cursor: pointer
  border-left: 0px solid $color-green

  &:hover
    border-left: 5px solid $color-green

  &::after
    content: ''
    border-bottom: 1px solid $color-gray-light
    position: absolute
    bottom: 0
    left: 8px
    right: 8px

  &:last-of-type
    &::after
      display: none

  h4
    margin: 25px 0 0 0

  .col-sm-2
    width: 50px

.#{$ns}-episode--number
  letter-spacing: 0.4px
  line-height: 1.7
  font-family: $font-sans
  color: $color-blue-light
  padding-bottom: 4px

  span
    color: rgba($color-gray, 0.4)

.#{$ns}-episode
  @media only screen and (max-width: 767px)

    &::after
      left: 0px
      right: 0px
    .col-sm-2
      width: 60px
      margin-left: 8px

    .col-sm-10
      margin-left: 14px

      h4
        margin-top: 10px

    .col-sm-8
      position: absolute
      left: 82px
      top: 50px

    .#{$ns}-episode--number
      line-height: 1.2
      margin-left: -7px
      
      span
        opacity: 0
        display: block
        height: 0px

